--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-        <title>Мой первый сайт</title>
+        <title>Gor- начинающий разработчик</title>
 
     </head>
     <body>
-        <h1>Привет, Мир!</h1>
+        <h1>Привет, я Гор</h1>
+        <h2>Я учусь создавать сайты</h2>
         <p>Это мой первый HTML- документ.</p>
+        <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>GitHub</li>
+        </ul>
+        <a href="https://github.com/GorRhinno" target="_blank"></a>
+        <img src="img/programming.jpg" style="width: auto;">
+        <footer>&#9400 2025 Гор Никогосян</footer>
     </body>
 </html>
