--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
         <title>Gor- начинающий разработчик</title>
-
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Привет, я Гор</h1>
@@ -16,7 +16,9 @@
             <li>GitHub</li>
         </ul>
         <a href="https://github.com/GorRhinno" target="_blank"></a>
-        <img src="img/programming.jpg" style="width: auto;">
-        <footer>&#9400 2025 Гор Никогосян</footer>
+        <img src="img/programming.jpg" alt="Изображение кода или программиста">
+        <footer>
+            <p>&#9400 2025 Гор Никогосян</p>
+        </footer>
     </body>
 </html>
