--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Привет, я Гор</h1>
-        <h2>Я учусь создавать сайты</h2>
-        <p>Это мой первый HTML- документ.</p>
-        <ul>
+        <h1 class="mrg">Привет, я Гор</h1>
+        <h2 class="mrg">Я учусь создавать сайты</h2>
+        <p class="mrg">Это мой первый HTML- документ.</p>
+        <ul class="mrg">
             <li>HTML</li>
             <li>CSS</li>
             <li>GitHub</li>
         </ul>
         <a href="https://github.com/GorRhinno" target="_blank"></a>
         <img src="img/programming.jpg" alt="Изображение кода или программиста">
-        <footer>
+        <footer class="mrg">
             <p>&#9400 2025 Гор Никогосян</p>
         </footer>
     </body>
