--- a/Codan.html
+++ b/Codan.html
@@ -17,6 +17,55 @@
       </nav>
     </div>
   </header>
+<section class="hero">
+  <div class="container">
+    <h1>Прокачай свои навыки с Codan</h1>
+    <p>Изучай HTML и CSS с нуля — шаг за шагом, без воды.</p>
+    <a href="#" class="btn">Начать обучение</a>
+  </div>
+</section>
+<section class="about">
+  <div class="container">
+    <h2>О проекте Codan</h2>
+    <p>
+      Codan — это учебный проект, созданный для того, чтобы шаг за шагом освоить HTML и CSS на практике. Без воды, с объяснениями, примерами и обратной связью.
+    </p>
+  </div>
+</section>
+<section class="features">
+  <div class="container">
+    <h2>Почему Codan?</h2>
+    <div class="feature-list">
+      <div class="feature">
+        <h3>Пошаговое обучение</h3>
+        <p>Каждая тема объясняется просто и наглядно — ты не потеряешься.</p>
+      </div>
+      <div class="feature">
+        <h3>Практика с первого дня</h3>
+        <p>Мы сразу кодим. Минимум теории, максимум действий.</p>
+      </div>
+      <div class="feature">
+        <h3>Обратная связь</h3>
+        <p>Ты не один — твой наставник (то есть я 😉) всегда рядом.</p>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="testimonials">
+  <div class="container">
+    <h2>Отзывы учеников</h2>
+    <div class="testimonial-list">
+      <div class="testimonial">
+        <p>Codan — лучший способ наконец-то понять, как работает вёрстка. Всё стало на свои места!</p>
+        <span>— Артём, начинающий фронтендер</span>
+      </div>
+      <div class="testimonial">
+        <p>До Codan я боялась кода, теперь я сама пишу свои первые страницы. Это кайф!</p>
+        <span>— Алина, маркетолог</span>
+      </div>
+    </div>
+  </div>
+</section>
 
 </body>
 </html>
